# NEMOCheck

./: .gitignore  README.md  main.ipynb  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb
data/: compute_climatology.sh  processing.ipynb
data/model/: nemo00_1m_201001_202212_Eq.nc  nemo00_1m_201001_202212_grid_T.nc  nemo00_1m_201001_202212_grid_T_new.nc  nemo01_1m_201001_202212_Eq.nc  nemo02_1m_201001_202212_Eq.nc  nemo04_1m_201001_202212_Eq.nc  nemo05_1m_201001_202212_Eq.nc  nemo06_1m_201001_202212_Eq.nc  nemo07_1m_201001_202212_Eq.nc  nemo08_1m_201001_202212_Eq.nc  nemo09_1m_201001_202212_Eq.nc  nemo10_1m_201001_202212_Eq.nc  nemo12_1m_201001_202212_Eq.nc  nemo14_1m_201001_202212_Eq.nc  nemo15_1m_201001_202212_Eq.nc  nemo16_1m_201001_202212_Eq.nc  nemo17_1m_201001_202212_Eq.nc  orca05l75_domain_cfg_nemov5_10m.nc
data/obs/: OISSS_L4_multimission_v2.0_1m_201201_202412.nc  dt_global_twosat_phy_l4_202307_vDT2021-M01.nc  mld_dr003_ref10m_v2023.nc
data/processed/: combined_observations.nc  model.nc  nemo00.nc  nemo00_clim_2011_2022.nc  nemo00_sst_monthly_2011_2022.nc  nemo01.nc  nemo01_clim_2011_2022.nc  nemo02.nc  nemo02_clim_2011_2022.nc  nemo04.nc  nemo04_clim_2011_2022.nc  nemo05.nc  nemo05_clim_2011_2022.nc  nemo06.nc  nemo06_clim_2011_2022.nc  nemo07.nc  nemo07_clim_2011_2022.nc  nemo08.nc  nemo08_clim_2011_2022.nc  nemo09.nc  nemo09_clim_2011_2022.nc  nemo10.nc  (+11 more)
env/: conda-lock.yml  environment.yml  install_env.sh
src/: DiffusionEquation.ipynb  TransportEquation_Up3_RK3.ipynb  combined.ipynb  lateral_diffusion.ipynb  regional_error.ipynb  regional_error_vertical.ipynb  vertical_error.ipynb
(+32 files in other folders)
