[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utils"
version = "0.1.0"
description = "Validation tools for the NEMO ocean model"
readme = "README.md"
authors = [
  { name = "Thomas Gantz" }
]
dependencies = [
  "numpy",
  "xarray",
  "matplotlib",
  "netCDF4",
  "pandas"
]

[tool.setuptools.packages.find]
where = ["src"]


