[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utils"
version = "0.1.0"
description = "Validation tools for the NEMO ocean model"
readme = "README.md"
authors = [
  { name = "Thomas Gantz" }
]
dependencies = [
    "cartopy",
    "dash",
    "dash_bootstrap_components",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "regionmask",
    "scipy",
    "xarray",
    "xesmf",
    "netCDF4"
]

[tool.setuptools.packages.find]
where = ["src"]


