[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemocheck"
version = "0.1.0"
description = "Validation tools for the NEMO ocean model"
readme = "README.md"
authors = [
  { name = "Thomas Gantz" }
]
dependencies = [
    "cartopy",
    "dash",
    "dash_bootstrap_components",
    "eofs",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "regionmask",
    "scipy",
    "xarray",
    "xesmf>=0.8.0",
    "netCDF4",
    "pyproj",  
    "proj"
]

[tool.setuptools.packages.find]
where = ["src"]


